--- a/src/main/java/View/LoginPage.form
+++ b/src/main/java/View/LoginPage.form
@@ -113,7 +113,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="52" max="32767" attributes="0"/>
+                      <EmptySpace pref="51" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -213,6 +213,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Forgot Password?"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel6MouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JCheckBox" name="rememberCheck">
               <Properties>
