--- a/src/main/java/View/LoginPage.form
+++ b/src/main/java/View/LoginPage.form
@@ -213,6 +213,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Forgot Password?"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel6MouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JCheckBox" name="rememberCheck">
               <Properties>
