--- a/src/main/java/View/InitialPanel.form
+++ b/src/main/java/View/InitialPanel.form
@@ -149,13 +149,14 @@
               <Font name="Segoe UI" size="12" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="5">
+              <Table columnCount="4" rowCount="6">
                 <Column editable="true" title="NAME" type="java.lang.Object">
                   <Data value="Aman Chaudhary"/>
                   <Data value="Biwash Ghimire"/>
                   <Data value="AAyush Sherstha"/>
                   <Data value="Binod Lamichanne"/>
                   <Data value="Aayam Bhattrai"/>
+                  <Data value="null"/>
                 </Column>
                 <Column editable="true" title="AGE" type="java.lang.Object">
                   <Data value="18"/>
@@ -163,6 +164,7 @@
                   <Data value="20"/>
                   <Data value="21"/>
                   <Data value="19"/>
+                  <Data value="null"/>
                 </Column>
                 <Column editable="true" title="GENDER" type="java.lang.Object">
                   <Data value="Male"/>
@@ -170,12 +172,14 @@
                   <Data value="Female"/>
                   <Data value="Male"/>
                   <Data value="Male"/>
+                  <Data value="null"/>
                 </Column>
                 <Column editable="true" title="DAIGNOSE" type="java.lang.Object">
-                  <Data value="Cancer"/>
-                  <Data value="Heart Failure"/>
-                  <Data value="Fracture"/>
-                  <Data value="Fracture"/>
+                  <Data value="People pleasing"/>
+                  <Data value="Childhood trauma"/>
+                  <Data value="Trauma"/>
+                  <Data value="Trauma"/>
+                  <Data value="null"/>
                   <Data value="null"/>
                 </Column>
               </Table>
